[tool.poetry]
name = "dagster-dags"
version = "0.1.0"
description = ""
authors = ["Guido Petri <18634426+guidopetri@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
more-itertools = "^10.4.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.351"
pre-commit = "^3.7.0"
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
ignore = []
useLibraryCodeForTypes = false

[tool.ruff]
line-length = 79

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
preview = true
